"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-08-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-07:
	  hacknet: debugged transistor enumeration when internal
		node rules are computed on-demand, by delaying
		transistor_index_offset calculation.
	  Also fixed bug in using wrong node_pool for node terminal
		graph printing when index is into local subcircuit's pool.
	  Added test case with internal node spanning subckt.


2011-08-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-06:
	  hacknet: debugged and tested node terminal output
		for locally-subcircuited netlists.


	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-05:
	  hacknet: enabled cached assoc_uid for transistors to that
		indicies are not generated on-the-fly during printing.
	  Updated 1 test case.


	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-04:
	  hacknet: reorder rule/macro process of subcircuits so that
		non-local-subcircuit rules are processed first, then
		whole subckts one-by-one, so that (eventually) grouped
		transistors may be enumerated contiguouly by subcircuit.


2011-08-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-03:
	  hacknet: added option to emit_node_terminals to print out
		graph representation of node connections.
		Output dump format is only preliminary now.
	  simplified some function prototypes no longer needing footprint.


2011-08-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-02:
	  hacknet: enabled computing node terminal graph information,
		but not checked or printed yet, doesn't crash anything.


	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-01:
	  Branch for implementing automatic precharge invariants